<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a_background"
    tools:content=".TreePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageButton
            android:id="@+id/back_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:src="@drawable/ic_a_back" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/menu_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/shopping_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/ic_a_bag" />

    </RelativeLayout>

    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="5">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_olive"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_olive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Olive"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_Olive"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_Olive"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_kauri"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_kauri" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/kauri"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_kuari"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_kuari"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_titoki"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_titoki" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/titoki"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_titoki"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_titoki"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_lemon"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_lemon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/lemon"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_lemon"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_lemon"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_fastigiata"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_fastigiata" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/fastigiata"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_fastigiata"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_fastigiata"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_square_white"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_evergreen"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/circle_evergreen" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/evergreen"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_L_evergreen"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/Size_S_evergreen"
                    android:textSize="16sp" />
            </LinearLayout>
            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/btnLogout"
                android:layout_width="118dp"
                android:layout_height="50dp"
                android:text="Logout" />

        </GridLayout>


    </ScrollView>




</LinearLayout>